8149797: Compilation fails with "assert(in_hash) failed: node should be in igvn hash table"

Node replaced by dominating dead cast during parsing

Reviewed-by: kvn